--- a/Predicting Bike Rentals (Decision Trees, Random Forests & Linear Regression).ipynb
+++ b/Predicting Bike Rentals (Decision Trees, Random Forests & Linear Regression).ipynb
@@ -1032,7 +1032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model 3 - Random Forests, bagging and random feature selection"
+    "### Model 3 - Random Forests"
    ]
   },
   {
